[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/EnemyHooker.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Scripts/EnemyArea2D.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Scripts/EnemyHooker.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.5259
height = 34.0264

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.169709, 0.169709 ), Vector2( 0.209, 0.099 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.26, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -18.431, 5.017 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.988235, 0.4, 0.4, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EnemyHooker" type="Node2D" groups=[
"claw_attackable",
"enemy",
]]
script = ExtResource( 3 )
health = 10
min_wave = 13
difficulty_point = 7
activation_x = 200.0
base_movement_speed = 100.0
hook_out_speed = 500.0

[node name="Sprite" type="Sprite" parent="."]
rotation = 6.28319
scale = Vector2( 0.169709, 0.169709 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 12
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.568802, 14.7888 )
shape = SubResource( 1 )

[node name="SearchTargetTimer" type="Timer" parent="."]
one_shot = true

[node name="HookStart" type="Position2D" parent="."]
position = Vector2( 43.6447, -16.2899 )

[node name="Line2D" type="Line2D" parent="HookStart"]
points = PoolVector2Array( 0, 0, 0, 0 )
default_color = Color( 0.823529, 0.486275, 0.0705882, 1 )
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="PearlContainer" type="Node2D" parent="."]
position = Vector2( -6.005, -60.0264 )

[node name="HookPearlContainer" type="Node2D" parent="."]

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 2 )
anims/receive_attack = SubResource( 3 )

[node name="StunTimer" type="Timer" parent="."]
one_shot = true
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
